--- a/Eventer.Client/src/App.css
+++ b/Eventer.Client/src/App.css
@@ -1,8 +1,9 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 2rem;
+    text-align: center;
+    background-color: #f0f0f0;
 }
 
 .logo {
@@ -44,6 +45,7 @@
 .content {
     margin-left: 0;
     transition: margin-left 0.3s ease;
+    background-color: #f0f0f0;
 }
 
 .sidebar-container.open ~ .content {
