Client CRUD for events completed. Started implementing image upload. Admin panel created.

--- a/Eventer.Client/src/css/EventPage.css
+++ b/Eventer.Client/src/css/EventPage.css
@@ -83,3 +83,14 @@ body {
     border-radius: 5px;
     cursor: pointer;
 }
+
+.events-error-message {
+    font-weight: bold;
+    font-size: 24px;
+    color: red;
+}
+
+.loading-text{
+    font-weight: bold;
+    font-size: 20px;
+}
