--- a/Eventer.Client/src/css/RegisterPage.css
+++ b/Eventer.Client/src/css/RegisterPage.css
@@ -33,7 +33,7 @@
     display: flex;
     flex-direction: column;
     text-align: left;
-    position: relative; /* Для иконки глаза */
+    position: relative;
 }
 
     .form-group label {
@@ -47,13 +47,13 @@
         border: 1px solid #ccc;
         border-radius: 5px;
         font-size: 16px;
-        width: 100%; /* Поле будет занимать всю ширину контейнера */
-        box-sizing: border-box; /* Учитывает padding и border */
+        width: 100%; 
+        box-sizing: border-box; 
     }
 
     .form-group .password-eye {
         position: absolute;
-        right: 10px; /* Расстояние от правого края */
+        right: 10px; 
         top: 75%;
         transform: translateY(-50%);
         cursor: pointer;
@@ -66,14 +66,15 @@
     font-size: 16px;
     color: black;
     background-color: white;
-    border: none;
+    border: 1px solid transparent;
     border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease, border 0.3s ease;
 }
 
 .error-message {
     color: red;
     font-size: 14px;
     margin-bottom: 10px;
+    font-weight: bold;
 }
