--- a/Eventer.Client/src/css/Sidebar.css
+++ b/Eventer.Client/src/css/Sidebar.css
@@ -44,7 +44,7 @@
     left: -300px;
     width: 250px;
     height: 100vh;
-    background-color: #222;
+    background-color: #111;
     color: white;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
     padding: 70px 20px;
@@ -80,10 +80,14 @@
 }
 
 .sidebar-links a:hover {
-    color: #007bff;
+    color: lightgray;
 }
 
 .sidebar-links li:last-child {
     margin-top: auto;
     margin-bottom: 100px;
+}
+
+.logout-button{
+    background-color: #111;
 }
