--- a/Eventer.Client/src/index.css
+++ b/Eventer.Client/src/index.css
@@ -17,9 +17,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
-a:hover {
-  color: #535bf2;
-}
+
 
 body {
     margin: 0;
@@ -46,9 +44,7 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
-}
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -65,4 +61,9 @@ button:focus-visible {
   button {
     background-color: #f0f0f0;
   }
+}
+
+input:-webkit-autofill {
+    background-color: #111 !important; 
+    transition: background-color 5000s ease-in-out 0s; 
 }
