--- a/Eventer.Client/src/css/CreateEventPage.css
+++ b/Eventer.Client/src/css/CreateEventPage.css
@@ -3,7 +3,7 @@
     max-width: 600px;
     width: 600px;
     margin: 0 auto;
-    font-family: Arial, sans-serif;
+    font-family: "Rubik", sans-serif;
 }
 
     .create-event-page h1 {
@@ -37,7 +37,12 @@
         font-size: 16px;
         border: 1px solid #ccc;
         border-radius: 5px;
+        font-family: "Rubik", sans-serif;
     }
+
+#description{
+    max-width: 578px
+}
 
 .create-event-button {
     padding: 10px 20px;
@@ -68,34 +73,3 @@
     background-color: #232323
 }
 
-.image-previews {
-    display: flex;
-    gap: 10px;
-    margin-top: 10px;
-}
-
-.image-preview {
-    position: relative;
-    width: 100px;
-    height: 100px;
-}
-
-    .image-preview img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        border-radius: 5px;
-    }
-
-    .image-preview button {
-        position: absolute;
-        top: 5px;
-        right: 5px;
-        background: red;
-        color: white;
-        border: none;
-        border-radius: 50%;
-        width: 20px;
-        height: 20px;
-        cursor: pointer;
-    }
