--- a/Eventer.Client/src/css/EditEventPage.css
+++ b/Eventer.Client/src/css/EditEventPage.css
@@ -12,10 +12,10 @@
         margin-bottom: 20px;
     }
 
-.edit-event-form .form-group {
-    margin-bottom: 15px;
+.edit-event-form {
     display: flex;
     flex-direction: column;
+    gap: 15px;
 }
 
 .edit-event-form label {
@@ -58,3 +58,54 @@
     margin-bottom: 10px;
     text-align: center;
 }
+
+.images-wrapper {
+    display: flex;
+    flex-wrap: wrap; 
+    gap: 10px; 
+    justify-content: flex-start;
+}
+
+.image-container {
+    position: relative;
+    width: 150px;
+    height: 150px;
+    background-color: lightgray;
+    border-radius: 4px;
+    align-items: center;
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+}
+
+    .image-container .add-new-image-button {
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+    }
+
+    .image-container img {
+        width: 100%;
+        height: 100%; 
+        object-fit: contain;
+        border-radius: 8px;
+    }
+
+    .image-container button {
+        position: absolute;
+        top: 5px;
+        right: 5px;
+        background: black;
+        color: white;
+        border: none;
+        border-radius: 50%;
+        width: 20px;
+        height: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        z-index: 10;
+        padding: 0;
+    }
+
