--- a/Eventer.Client/src/css/EventDetailsPage.css
+++ b/Eventer.Client/src/css/EventDetailsPage.css
@@ -82,6 +82,7 @@
 
 .carousel-arrow--prev {
     left: 0;
+    z-index:100;
 }
 
 .carousel-arrow--next {
@@ -120,15 +121,6 @@
     font-size: 14px;
 }
 
-.register-button {
-    display: block;
-    margin: 20px auto;
-    padding: 15px 30px;
-    font-size: 18px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
 .remaining-seats {
     text-align: center;
     font-size: 16px;
@@ -137,7 +129,38 @@
     color: #333;
 }
 
-.back-button :hover {
-    background-color: #232323 !important;
+.details-register-button,
+.edit-button,
+.back-button {
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
 }
 
+.back-button:hover {
+    background-color: #232323;
+}
+
+.enrolled-message {
+    color: green;
+    font-weight: bold;
+    margin-bottom: 15px;
+    font-size: 18px;
+}
+
+.button-container {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    justify-content: center;
+    gap: 10px;
+}
+
+.full-event-message {
+    color: red;
+    font-weight: bold;
+    margin-top: 10px;
+    text-align: center;
+}
