--- a/Eventer.Client/src/css/AdminPage.css
+++ b/Eventer.Client/src/css/AdminPage.css
@@ -174,3 +174,9 @@
     .cancel-button:hover {
         background-color: #e0e0e0;
     }
+
+.admin-error-message{
+    font-weight: bold;
+    color: red;
+    font-size: 24px;
+}
