--- a/Eventer.Client/src/css/EventDetailsPage.css
+++ b/Eventer.Client/src/css/EventDetailsPage.css
@@ -164,3 +164,9 @@
     margin-top: 10px;
     text-align: center;
 }
+
+.event-error-message{
+    color: red;
+    font-size: 24px;
+    font-weight: bold;
+}
