--- a/Eventer.Client/src/css/AboutPage.css
+++ b/Eventer.Client/src/css/AboutPage.css
@@ -33,6 +33,7 @@
     padding-bottom: 5px;
 }
 
+.test-users,
 .project-overview,
 .features-section,
 .additional-info,
@@ -45,7 +46,8 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.tech-list {
+.tech-list,
+.test-users-list {
     list-style-type: none;
     margin-left: 0;
     padding: 0;
